<resources>
    <string name="app_name">VIP PUBGM</string>
    <string name="app_name2">AHMED</string>
    <string name="app_name3">LOADER</string>
    <string name="please_upgrade_to_premium">Please Upgrade to PREMIUM</string>
    <string name="recoil_weapon_slot_1">Recoil Weapon Slot 1</string>
    <string name="recoil_weapon_slot_2">Recoil Weapon Slot 2</string>
    <string name="sets_postion_x_of_touch_">Sets Postion X of Touch :</string>
    <string name="touch_position_y">Touch Position Y</string>
    <string name="ser2">Expires on: </string>
    <string name="token_expired">Token Expired!</string>
    <string name="menu">Menu</string>
    <string name="uninstalled">Uninstalled</string>
    <string name="update_chk_fail">Update Check Failed</string>
    <string name="version_installed">Installed</string>
    <string name="version_latest">Latest</string>
    <string name="version_supported">Supported</string>
    <string name="versions">version (crc)</string>
    <string name="check_all">CHECK ALL</string>
    <string name="none_all">NONE ALL</string>
    <string name="special_item">Special Item</string>
    <string name="scopes">Scopes</string>
    <string name="ar_weapons">AR Weapons</string>
    <string name="others_weapon">Others Weapon</string>
    <string name="smg_weapons">SMG Weapons</string>
    <string name="sniper_weapons">Sniper Weapons</string>
    <string name="shotguns">Shotguns</string>
    <string name="pistols">Pistols</string>
    <string name="handy">Handy</string>
    <string name="throwables">Throwables</string>
    <string name="ammo_bullet">Ammo Bullet</string>
    <string name="bag__helmet_and_vest">Bag , Helmet and Vest</string>
    <string name="medics">Medics</string>
    <string name="suppressor_hider_compe">Suppressor, Hider, Compe</string>
    <string name="magazine">Magazine</string>
    <string name="grip">Grip</string>
    <string name="others">Others</string>
    <string name="fixed_crash">Fixed Crash</string>
    <string name="please_actived_in_first_logo_">please actived in first logo, for fix crash</string>
    <string name="magic_bullet_head">Magic Bullet Head</string>
    <string name="magic_bullet_head_all_weapon">Magic bullet head all weapon</string>
    <string name="hit_x_effect">Hit X Effect</string>
    <string name="hit_x_effect_active_in_game">Hit X Effect Active In Game</string>
    <string name="less_recoil">Less Recoil</string>
    <string name="reduce_recoil_all_weapon">Reduce recoil all weapon</string>
    <string name="protection_cheats">Protection Cheats</string>
    <string name="protection_logo">Protection Logo</string>
    <string name="crash_fix_2nd_logo">Crash Fix 2nd Logo</string>
    <string name="block_report_island">Block Report [Island]</string>
    <string name="announcement">Announcement</string>
    <string name="server_data">Server Data</string>
    <string name="free_mode">Free Mode</string>
    <string name="not_many_features_are_unlocked">Not many features are unlocked</string>
    <string name="premium_mode">Premium Mode</string>
    <string name="all_features_unlocked">All features unlocked</string>
    <string name="english">English</string>
    <string name="announcement_changelogs"><![CDATA[Announcement & Changelogs]]></string>
    <string name="substime">Your Subscription Time Will Be End On</string>
	<string name="day">Day</string>
	<string name="hour">Hour</string>
	<string name="minute">Minute</string>
	<string name="second">Second</string>
    <string name="select_esp_mode">Select Esp Mode</string>
    <string name="game_support">Games Support : </string>
    <string name="usrname">Username : </string>
    <string name="mdl">Model</string>
    <string name="android_version">Android version</string>
    <string name="account_type">Account Type :</string>
    <string name="gaming_gg">Game Guardian</string>
    <string name="via_bro">Via Browser</string>
    <string name="twitr">Twitter</string>
    <string name="hiderec">Hide Record</string>
    <string name="fix_obb">Fix Files OBB</string>
    <string name="esp11"> Tap In Photo To Activate Menu</string>
    <string name="p1">PUBGM Global</string>
    <string name="p2">PUBGM Korea</string>
    <string name="p3">PUBGM Vietnam</string>
    <string name="p4">PUBGM Taiwan</string>
    <string name="s1">Server : </string>
    <string name="s2"></string>
    <string name="espe1">ESP </string>
    <string name="espItems">Items </string>
    <string name="espeCars">Cars </string>
    <string name="espesdk">SDK </string>
    <string name="espeaim"> Aim </string>
	<string name="logtv1">Root Access</string>
	<string name="logtv2">3.4</string>
	<string name="logtv3">Enter Your Activation Key...</string>
    <string name="telenew">Telegram</string>
	<string name="tiktoknew">Website</string>
    <string name="Check_the_current_status">Mode Selected: </string>
	<string name="Return_to_mode_mode">Switch Mode</string>
    <string name="error">Error</string>
    <string name="please_update_protection_resources">Please Update Protection Resources</string>
    <string name="button_positive">Protection</string>
<string name="button_negative">Other</string>
<string name="button_neutral">Cancel</string>
    <string name="super_user_granted">Super user granted !</string>
    <string name="super_user_notgranted">Super user N/A ?</string>
    <string name="erorserver">Check you connection</string>
    <string name="userorgamenotregis">USER OR GAME NOT REGISTERED</string>
    <string name="expiredkey">Expired Key...</string>
    <string name="maxdevice">MAX DEVICE REACHED</string>
    <string name="BadParameter">Bad Parameter</string>
    <string name="MAINTENANCE">MAINTENANCE</string>
    <string name="INVALIDPARAMETER">INVALID PARAMETER</string>
    <string name="userblock">USER BLOCKED</string>
    <string name="confirm">Confirm</string>
    <string name="logouta">Are you sure need logout ?, if yes click ok in bellow</string>
    <string name="activity_login_textPassword_hint">Enter Your Name</string>
    <string name="activity_login_textUsername_hint">Enter Licence</string>
    <string name="activity_login_registerText_text">Register!</string>
    <string name="activity_main_days_text">00</string>
    <string name="activity_main_hours_text">00</string>
    <string name="activity_main_minutes_text">00</string>
    <string name="activity_main_seconds_text">00</string>
    <string name="activity_mode_text32_text">SAFE MODE - 32 Bit</string>
    <string name="activity_mode_tex64_text">SAFE MODE - 64 Bit</string>
    <string name="activity_mode_pro64_text">PRO MODE - 64 Bit</string>
    <string name="activity_mode_pro32_text">PRO MODE - 32 Bit</string>
    <string name="activity_mode_textsstart_text">CLICK TO START</string>
    <string name="activity_mode_textsstop_text">CLICK TO STOP</string>
    <string name="activity_mode_txtsafemode_text">SAFE MODE</string>
    <string name="activity_mode_txtpromode_text">PRO MODE</string>
    <string name="activity_mode_textversions1_text">GLOBAL SERVER 1</string>
    <string name="activity_mode_textversions2_text">GLOBAL SERVER 2</string>
    <string name="activity_navigation_textroot_text">Root Access</string>
    <string name="activity_profile_userid_text">Mahyong</string>
    <string name="activity_profile_dates_text">0/20/12</string>
    <string name="activity_profile_devicename_text">ROG - 8</string>
    <string name="activity_profile_osver_text">14</string>
    <string name="activity_setting_bahasa_hint">English</string>
    <string name="alert_one_heading_alert_info_text">Header1</string>
    <string name="alert_one_title_alert_info_text">Nama awal tidak boleh kosong harus terisi!</string>
    <string name="alert_one_btndone_alert_info_text">OK</string>
    <string name="bottom_sheet_dialog_layout_title_text">title</string>
    <string name="bottom_sheet_dialog_layout_msg_text">masasge</string>
    <string name="bottom_sheet_dialog_layout_btn_cancle_text">no</string>
    <string name="bottom_sheet_dialog_layout_btn_text">ok</string>
    <string name="esp_aimbot_rangetext_text">0</string>
    <string name="esp_aimbot_distancetext_text">0</string>
    <string name="esp_aimbot_bulletspeedtext_text">0</string>
    <string name="esp_aimbot_recoiltext_text">0</string>
    <string name="esp_aimbot_radioButton_text">Head</string>
    <string name="esp_aimbot_radioButton2_text">Neck</string>
    <string name="esp_aimbot_radioButton3_text">Chest</string>
    <string name="esp_aimbot_radioButton9_text">Crosshair Priority</string>
    <string name="esp_aimbot_radioButton4_text">Distance Priority</string>
    <string name="esp_aimbot_radioButton5_text">Ads or Firing</string>
    <string name="esp_aimbot_radioButton6_text">Ads Only</string>
    <string name="esp_aimbot_radioButton7_text">Firing Only</string>
    <string name="esp_inventory_UTV_text">UTV</string>
    <string name="esp_inventory_MonsterTruck_text">Monster</string>
    <string name="esp_inventory_Buggy_text">Buggy</string>
    <string name="esp_inventory_UAZ_text">UAZ</string>
    <string name="esp_inventory_Trike_text">Trike</string>
    <string name="esp_inventory_Jet_text">Jet</string>
    <string name="esp_inventory_CoupeRB_text">CoupeRB</string>
    <string name="esp_inventory_Motorglider_text">Motor Glider</string>
    <string name="esp_inventory_Bike_text">Bike</string>
    <string name="esp_inventory_Dacia_text">Dacia</string>
    <string name="esp_inventory_Boat_text">Boat</string>
    <string name="esp_inventory_Bus_text">Bus</string>
    <string name="esp_inventory_Mirado_text">Mirado</string>
    <string name="esp_inventory_Snowbike_text">Snowbike</string>
    <string name="esp_inventory_Scooter_text">Scooter</string>
    <string name="esp_inventory_Rony_text">Rony</string>
    <string name="esp_inventory_Snowmobile_text">Snowmobile</string>
    <string name="esp_inventory_Tempo_text">Tempo</string>
    <string name="esp_inventory_Truck_text">Truck</string>
    <string name="esp_inventory_LadaNiva_text">LadaNiva</string>
    <string name="esp_inventory_BRDM_text">BRDM</string>
    <string name="esp_inventory_ATV_text">ATV1</string>
    <string name="esp_inventory_Crate_text">Crate</string>
    <string name="esp_inventory_Airdrop_text">AirDrop</string>
    <string name="esp_inventory_DropPlane_text">DropPlane</string>
    <string name="esp_inventory_FlareGun_text">FlareGun</string>
    <string name="esp_inventory_lootbox_text">LootBox</string>
    <string name="esp_inventory_x2_text">2x</string>
    <string name="esp_inventory_x3_text">3x</string>
    <string name="esp_inventory_x4_text">4x</string>
    <string name="esp_inventory_x6_text">6x</string>
    <string name="esp_inventory_x8_text">8x</string>
    <string name="esp_inventory_reddot_text">Red Dot</string>
    <string name="esp_inventory_hollow_text">Hollow</string>
    <string name="esp_inventory_canted_text">Canted</string>
    <string name="esp_inventory_m416_text">M416</string>
    <string name="esp_inventory_AKM_text">AKM</string>
    <string name="esp_inventory_M16A4_text">M16A4</string>
    <string name="esp_inventory_M762_text">M762</string>
    <string name="esp_inventory_SCARL_text">SCAR-L</string>
    <string name="esp_inventory_AC32_text">ACE32</string>
    <string name="esp_inventory_AUG_text">AUG</string>
    <string name="esp_inventory_HoneyBadger_text">Honey Badger</string>
    <string name="esp_inventory_G36C_text">G36C</string>
    <string name="esp_inventory_Groza_text">Groza</string>
    <string name="esp_inventory_QBZ_text">QBZ</string>
    <string name="esp_inventory_FAMAS_text">FAMAS</string>
    <string name="esp_inventory_M249_text">M249</string>
    <string name="esp_inventory_DP28_text">DP28</string>
    <string name="esp_inventory_MG3_text">MG3</string>
    <string name="esp_inventory_UMP_text">UMP</string>
    <string name="login">SIGN IN</string>
    <string name="don_t_have_key">Don\'t have Key?</string>
</resources>